<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:text="Write Data"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to External Storage"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nama_file_example_txt"
        android:inputType="textPersonName"
        android:id="@+id/namefile"
        app:layout_constraintTop_toBottomOf="@+id/tv2"/>

    <EditText
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/isi_file"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/namefile"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:padding="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/buat_file"
        android:onClick="BuatData"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/btnCreate"
        app:layout_constraintTop_toBottomOf="@+id/data"
        />
    <Button
        android:id="@+id/btnRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:layout_marginTop="90dp"
        android:text="@string/read_form"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate"
        />
</LinearLayout>