<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".read_data">

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_data"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_marginTop="90dp"
        />
    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_external_storage"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/nameFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/nama_file_txt"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:padding="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/read_data"
        android:onClick="bacafile"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/btnReadData"
        app:layout_constraintTop_toBottomOf="@+id/nameFile"
        />

    <EditText
        android:id="@+id/Data"
        android:height="100dp"
        android:fadeScrollbars="true"
        android:inputType="textMultiLine"
        android:selectAllOnFocus="true"
        tools:maxHeight="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
         />
</LinearLayout>